[project]
name = "tracking"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "gdown>=6.1.0",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pyside6>=6.11.1",
    "scipy>=1.17.1",
    "setuptools>=70.2.0",
    "tensorboard>=2.20.0",
    "torch>=2.11.0",
    "torchreid>=0.2.5",
    "torchvision>=0.26.0",
    "ultralytics>=8.4.82",
    "utils>=1.0.2",
    "wheel>=0.47.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"
